--- a/contrib/translations/ja/ja_JP.lng
+++ b/contrib/translations/ja/ja_JP.lng
@@ -4417,8 +4417,8 @@ C ドライブはすでにマウントされていますが、続けますか?
 :MENU_JP_CPONLY
 この機能は日本語のコードページ (932) のみに使われます。
 .
-:MENU_CN_CPONLY
-この機能は中国語のコードページ (936 または 950) のみに使われます。
+:MENU_CH_CPONLY
+この機能は中国語のコードページ (936、950、または951) のみに使われます。
 .
 :MENU_GLIDE_ERROR
 Glide パススルーを設定できませんでした。Glide ラッパーが正しくインストールされているか確認して下さい。
