--- a/CHANGELOG
+++ b/CHANGELOG
@@ -15,6 +15,13 @@ Next version
     to work on real MS-DOS and the DOSBox/DOSBox-X local folder support code
     anyway. This fix allows Elder Scrolls Arena to run from a mounted disk
     image. (joncampbell123).
+  - FAT filesystem driver (for disk images): If Elder Scrolls Arena calls
+    INT 21h to find SAVEGAME.00 (yes, a specific name for some reason) with
+    an attribute mask of 0x7C (which represents... um... what?), ignore the
+    VOLUME LABEL bit so that players can load their saved games from the
+    menu instead of being told that the saved game that is clearly there on
+    the screen does not exist. What other weird random values of CX attribute
+    mask does this game use? (joncampbell123).
 
 2025.05.03
   - Show TURBO status in title bar. (maron2000)
