Another update for fr_FR.lng file

--- a/contrib/translations/fr/fr_FR.lng
+++ b/contrib/translations/fr/fr_FR.lng
@@ -4497,3 +4497,48 @@ Vous avez spécifié un fichier de langue qui utilise un code de page incompatib
 :LANG_CHANGE_CP
 Le fichier de langue spécifié utilise la page de code %d. Voulez-vous passer à cette page de code en conséquence ?.
 .
+:SCALER_LOAD_WARN
+Cette échelle peut ne pas fonctionner correctement ou avoir des effets indésirables :
+
+%s
+
+Voulez-vous forcer le chargement de l'échelle ?
+.
+:PIXEL_SHADER_WARN
+Ce pixel shader peut être inutile ou avoir un effet indésirable.:
+
+%s
+
+Voulez-vous charger le pixel shader malgré tout ?
+
+(Vous pouvez ajouter « forcé » au paramètre Pixel shader pour forcer le chargement du Pixel shader sans ce message)
+.
+:PIXEL_SHADER_LOADED
+Pixel shader chargé - %s
+.
+:MAPPEREDITOR_NOT_AVAILABLE
+L'éditeur de mappage n'est pas disponible actuellement.
+.
+:OPL_REC_COMPLETED
+Enregistrement de la sortie OPL brute dans le fichier :
+
+%s
+.
+:OPL_CAPTURE_FAILED
+Impossible de capturer la sortie Raw OPL car le mode natif ESFM est utilisé par l'application actuelle, ce qui n'est pas pris en charge par 
+le format Raw OPL.
+.
+:TTF_DBCS_ONLY
+Cette fonction n'est disponible que pour les code de pages chinoises/japonaises/coréennes..
+.
+:SAVE_FAILED
+Échec de la sauvegarde de l'état actuel.
+.
+:SAVE_CORRUPTED
+L'état de la sauvegarde est corrompu ! Le programme peut ne pas fonctionner.
+.
+:SAVE_SCREENSHOT
+Enregistrement de la capture d'écran dans le fichier :
+
+%s
+.
