--- a/contrib/translations/de/de_pc98.lng
+++ b/contrib/translations/de/de_pc98.lng
@@ -273,7 +273,7 @@ Aktuelle Lautstaerkeeinstellung
 Sound Blaster Konfiguration
 .
 :CURRENT_MIDICONFIG
-Aktuelle MIDI Konfiguration
+Aktuelle MIDI/OPL Konfiguration
 .
 :CREATE_IMAGE
 Leeres Laufwerksimage erstellen
@@ -3159,7 +3159,7 @@ Zeige Lautstaerkeregler
 Zeige Sound Blaster Konfiguration
 .
 :MENU:midi_info
-Zeige MIDI Konfiguration
+Zeige MIDI/OPL Konfiguration
 .
 :MENU:DOSMenu
 DOS
