--- a/contrib/translations/fr/fr_FR.lng
+++ b/contrib/translations/fr/fr_FR.lng
@@ -150,7 +150,7 @@ Volumes actuels de la table de mixage
 Configuration Sound Blaster
 .
 :CURRENT_MIDICONFIG
-Configuration MIDI actuelle
+Configuration MIDI/OPL actuelle
 .
 :CREATE_IMAGE
 Créer une image disque vierge
@@ -2990,7 +2990,7 @@ Afficher les volumes du mélangeur de sons
 Afficher la configuration Sound Blaster
 .
 :MENU:midi_info
-Afficher la configuration du périphérique MIDI
+Afficher la configuration du périphérique MIDI/OPL
 .
 :MENU:DOSMenu
 DOS
