--- a/CHANGELOG
+++ b/CHANGELOG
@@ -66,6 +66,11 @@ Next version
     (maron2000)
   - MIDI: Show loaded Soundfont/ROM path only when required to. (maron2000)
   - SDL2: Updated SDL2 library to version 2.32.10 (maron2000) 
+  - Apply aspect/scaling/clipping when using OpenGL shaders in windowed-mode
+    (rebb)
+  - Fixed file locking problem on Linux port (loops)
+  - Fixed typo in Linux man page (-date-host-forced option) (maron2000)
+  - Mention OPL in MIDI/OPL configuration dialog menu (maron2000)  
 
 2025.05.03
   - Show TURBO status in title bar. (maron2000)
